--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "esbuild": "^0.25.0",
         "eslint": "^9.19.0",
         "gh-pages": "^6.3.0",
         "globals": "^15.14.0",
@@ -15,10 +16,7 @@
         "dev": "npx esbuild js/*.js --bundle --outdir=dist --servedir=.",
         "build": "npx esbuild js/*.js --bundle --minify --outdir=dist",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
-    },
-    "dependencies": {
-        "esbuild": "^0.24.2"
+        "deploy": "gh-pages -d dist"
     },
     "homepage": "https://siigitmardiansyaah.github.io/shinta_invitation/"
 }
